--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,1 +1,12 @@
-<p>heroes works!</p>
+<h2>{{ hero.name | uppercase }} Details</h2>
+<!--to make hero.name uppercase-->
+
+<div><span>id: </span>{{ hero.id }}</div>
+<div><span>name: </span>{{ hero.name }}</div>
+
+<div>
+  <label for="name">Hero name: </label>
+  <input id="name" [(ngModel)]="hero.name" placeholder="name" />
+  <!--any change in the input will affect hero.name (in ts)-->
+  <!--ngModel two way binding syntax-->
+</div>
