--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,12 +1,37 @@
-<h2>{{ hero.name | uppercase }} Details</h2>
+<!-- <h2>{{ hero.name | uppercase }} Details</h2> -->
 <!--to make hero.name uppercase-->
 
-<div><span>id: </span>{{ hero.id }}</div>
-<div><span>name: </span>{{ hero.name }}</div>
+<!-- <div><span>id: </span>{{ hero.id }}</div>
+<div><span>name: </span>{{ hero.name }}</div> -->
 
 <div>
-  <label for="name">Hero name: </label>
-  <input id="name" [(ngModel)]="hero.name" placeholder="name" />
+  <!-- <label for="name">Hero name: </label>
+  <input id="name" [(ngModel)]="hero.name" placeholder="name" /> -->
   <!--any change in the input will affect hero.name (in ts)-->
   <!--ngModel two way binding syntax-->
+
+  <h2>my heroes</h2>
+  <ul class="heroes">
+    <li
+      *ngFor="let hero of heroes"
+      (click)="onSelect(hero)"
+      [class.selected]="hero === selectedHero"
+    >
+      <span class="badge">{{ hero.id }}</span> {{ hero.name }}
+    </li>
+  </ul>
+  <!-- if we do not put the conditional statement an error will pop up saying that -->
+  <!--if there is a selectedHero then display this division else don't show it -->
+  <div *ngIf="selectedHero">
+    <h2>{{ selectedHero.name | uppercase }} Details</h2>
+    <div><span>id: </span>{{ selectedHero.id }}</div>
+    <div>
+      <label for="hero-name">Hero name: </label>
+      <input
+        id="hero-name"
+        [(ngModel)]="selectedHero.name"
+        placeholder="name"
+      />
+    </div>
+  </div>
 </div>
